2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: An FE is mentor bound if it has a
	  binding on it's DataContext and it's Parent element is null.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Binding.cs:
	* CollectionViewGroup.cs:
	* CollectionViewSource.cs:
	* PropertyGroupDescription.cs: Update to SL4 final API.

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: If the datasource implements
	  INotifyDataError we should use it. Stops 232 from hanging,
	  woo!

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Only capture validation exceptions
	  if ValidatesOnExceptions is true, just like the way we only
	  capture data errors if ValidatesOnDataError is true.
	  Simplify the emit error code a bit too.

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Tighten up the places where we
	  emit validation errors. Fixes some more of 232.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Only emit data errors if
	  ValidatesOnDataErrors is true. Also check for data errors
	  when the PropertyPathWalker value updates.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* IPropertyPathNode.cs:
	* BindingExpressionBase.cs: Put in initial support for
	  IDataErrorInfo objects. Passes the basic tests in drt 232.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: We now pass all the V3 Validation
	  tests in drt 232. hurrah!

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Update our implementation of
	  mentors to allow us to listen for changes to the mentor and
	  correctly NULL it out when the mentor is destroyed as if we
	  were to ref the mentor we'd create a cycle.

2010-06-01  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Implement the first section of
	  mentor based databinding. When doing DataContext based